# claude-code-infrastructure-showcase

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  cloudbuild-simple.yaml  generate_new_token.py  googleads.yaml.example  mcp-inspector.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
.claude/: INTEGRATION_COMPLETE.md  settings.json
.claude/agents/: fastapi-auth-debugger.md  fastapi-route-tester.md  python-error-fixer.md
.claude/commands/: next-issue.md
.claude/skills/: README.md  skill-rules.json
.claude/skills/fastmcp-development/: SKILL.md
.claude/skills/gam-api-reports/: SKILL.md
.claude/skills/python-fastapi-guidelines/: SKILL.md
.claude/skills/route-tester/: SKILL.md
.claude/tsc-cache/61cc27d2-a71b-46bb-a148-c5dca6d1bfc9/: affected-repos.txt
.claude/tsc-cache/66fd21ce-ca4f-4518-9573-08d489dbeacb/: affected-repos.txt
.claude/tsc-cache/c1f45bc6-5214-4e4e-9c90-5ca3c2e63e4a/: affected-repos.txt
.claude/tsc-cache/e84a868d-6ad5-49d0-ad24-6a62b1fa65c6/: affected-repos.txt
.github/workflows/: claude.yml
applications/api-server/: CLAUDE.md  Dockerfile  README.md  __init__.py  auth.py  main.py  models.py  requirements.txt
applications/api-server/routes/: __init__.py  health.py  metadata.py  reports.py
applications/gam-reports-mcp/: .dockerignore  DEPLOYMENT.md  Dockerfile  E2E-IMPLEMENTATION-STATUS.md  E2E-TEST-COMPLETION-SUMMARY.md  E2E-TESTING.md  GAM-INTEGRATION-COMPLETE.md  OAUTH-AND-TESTING-COMPLETE.md  OAUTH-IMPLEMENTATION.md  OAUTH-TESTING-COMPLETE.md  deploy-production.sh  deploy.sh  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml  run-e2e-tests.sh  search.py  server.py  test-local.sh
applications/gam-reports-mcp/config/: __init__.py  settings.py
applications/gam-reports-mcp/core/: __init__.py  auth.py  client.py
applications/gam-reports-mcp/endpoints/: __init__.py  create.py  delete.py  fetch.py  get.py  list.py  operations.py  run.py  update.py
applications/gam-reports-mcp/models/: __init__.py  date_range.py  dimensions.py  enums.py  errors.py  filters.py  knowledge.py  metrics.py  reports.py  schedule.py  size.py
applications/gam-reports-mcp/tests/: test_config.py  test_core.py  test_endpoints.py  test_models.py  test_search.py  test_server.py
applications/gam-reports-mcp/tests/e2e/: README.md  __init__.py  conftest.py  helpers.py  test_01_server_health.py  test_02_resources.py  test_03_tools.py  test_04_workflows.py  test_05_authentication.py  test_06_gam_integration.py
applications/mcp-server/: CLAUDE.md  Dockerfile  README.md  __init__.py  auth.py  dependencies.py  docker-compose.test.yml  fastmcp_server.py  main.py  pyproject.toml  server.py  settings.py
applications/mcp-server/models/: __init__.py  responses.py  tools.py
applications/mcp-server/services/: __init__.py  report_service.py
applications/mcp-server/tools/: __init__.py  metadata.py  reports.py
applications/mcp_server/: __init__.py  auth.py  dependencies.py  main.py  server.py  settings.py
applications/mcp_server/models/: __init__.py  responses.py
applications/mcp_server/services/: __init__.py
config/: agent_config.yaml.example  config_utils.py  mcp_server.yaml  validation.py
config/examples/: mcp_server.yaml
docs/: GOOGLE_AD_MANAGER_API.md  NEW_PACKAGE_GUIDE.md  REAL_CREDENTIALS_TESTING_GUIDE.md  SDK_USAGE_GUIDE.md  UNIFIED_CLIENT_GUIDE.md  UNIFIED_CLIENT_QUICK_REFERENCE.md  api-reference.md  deployment.md  domains.csv  troubleshooting.md
docs/api/: GAM_API_V1_COMPLETE_REFERENCE.md
docs/archive/planning/: CODE_TO_PRESERVE.md  COMPLETE_AA487_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_JOURNEY_MAP.md  DUPLICATION_CLEANUP_SUMMARY.md  EXECUTIVE_SUMMARY_SIMPLIFICATION.md  LINEAR_ISSUES_SIMPLIFICATION.md  LINEAR_READY_ISSUES.md  SIMPLIFICATION_DOCUMENTS_SUMMARY.md  SIMPLIFICATION_IMPACT.md  SIMPLIFICATION_PLAN.md
docs/decisions/: AA-469-simplified-core-components-completion.md  AA-471-visual-report-builder-backlog-decision.md
docs/examples/: README.md  api_usage.py  custom_report.py  mcp_usage.py  new_api_demo.py  sdk_advanced_usage.py  sdk_quick_start.py  sdk_usage.py  unified_client_demo.py
docs/plans/: 2025-12-01-mcp-server-refactor.md  2025-12-02-gam-reports-mcp-design.md  2025-12-02-gam-reports-mcp-implementation.md
docs/soap/ad-rules-video/: README.md
docs/soap/configuration/: README.md
docs/soap/creatives/: NativeStyleService.md  README.md
docs/soap/inventory/: README.md
docs/soap/labels-custom-fields/: README.md
docs/testing/: JOURNEY_TESTING_GUIDE.md  JOURNEY_TESTING_IMPLEMENTATION.md  TESTING_GUIDE.md
infrastructure/: README.md
infrastructure/deploy/: AUTHENTICATION.md  DEPLOYMENT_FINAL.md  README.md  cloud-run-deploy.sh  quick-deploy.sh  setup-credentials.sh  setup-secrets.sh  test_mcp_tools.py
scripts/: run_coverage_report.py  run_e2e_tests.sh  run_journey_validation.sh  setup_env.sh  setup_real_credentials.py  test_credentials.py  test_mcp_automated.sh  test_with_inspector.sh
tests/: __init__.py  comprehensive_validation.py  conftest.py
tests/api/: test_health.py  test_reports.py
tests/e2e/: test_mcp_server_docker.py
tests/fixtures/: __init__.py  api_responses.py  mock_data.py
tests/functional/: test_unified_integration.py
tests/installation/: __init__.py  test_package_install.py
tests/integration/: __init__.py  test_gam_end_to_end.py  test_mcp_server_client.py  test_mcp_server_real.py  test_mcp_tools.py  test_rest_api.py  test_sdk_integration.py
tests/journeys/: base_journey_test.py  journey_configs.yaml  journey_test_framework.py  real_credentials_test.py  run_journey_tests.py  test_authentication_journeys.py  test_critical_journeys.py  test_report_generation_journeys.py
tests/performance/: __init__.py  test_performance.py
tests/structure/: __init__.py  test_package_structure.py
tests/unit/: __init__.py  test_auth.py  test_client.py  test_config.py  test_error_scenarios.py  test_models.py  test_reports.py  test_sdk_auth.py  test_sdk_client.py  test_sdk_config.py  test_sdk_reports.py  test_soap_adapter.py
tests/utils/: __init__.py  test_helpers.py
(+35 files in other folders)
