[project]
name = "gam-mcp-server"
version = "2.0.0"
description = "Google Ad Manager MCP Server for AI Assistants"
readme = "README.md"
authors = [
    {name = "GAM API Team", email = "team@gam-api.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"

# Dependencies
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "gam-api-core",
    "gam-api-shared",
    "aiohttp>=3.13.2",
]

# Local package dependencies (monorepo)
[tool.uv.sources]
gam-api-core = { path = "../../packages/core" }
gam-api-shared = { path = "../../packages/shared" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/your-org/gam-api"
Repository = "https://github.com/your-org/gam-api"
Issues = "https://github.com/your-org/gam-api/issues"

# Development tools
[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
